# ipi-msi

./: Makefile
hs/: Cargo.toml  Makefile
hs/src/: aplic.rs  console.rs  consts.rs  context.rs  csr.rs  entry.rs  imsic.rs  linker.ld  main.rs  percpu.rs  ringbuffer.rs  syscall.rs  trap.S  trap.rs  vm.rs  vm_main.rs  vs_main.rs
