[package]
name = "hs"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
spin = "0.9"
fdt = { version = "0.1.5", features =["pretty-printing"]}

[profile.release]
debug = true
